kubernetes/apps/phela/_base/netpol.yaml
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: phela
spec:
  description: "Network policies for the phela website"
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: phela
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "80"
  egress:
    - toCIDRSet:
        - cidr: "0.0.0.0/0"
          except: ["192.168.68.0/23"]
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http: [{}]
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: mysql
            k8s:app.kubernetes.io/name: mysql-router
      toPorts:
        - ports:
            - port: "6446" # MySQL Router primary (RW) classic protocol
            - port: "6447" # MySQL Router read-only classic protocol
            - port: "6450" # MySQL Router read/write split
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
